package foodie.ui;

import javafx.stage.Stage;

/**
 * Interface with update method for controllers.
 */
public interface FoodieController {
  public void update();

  public void setStage(Stage stage);

}
